load settings from backend
